<resources>
    <string name="app_name">Ski Patrol</string>
    <string name="nav_leader_header_text">Example User</string>
    <string name="nav_leader_header_email">exampleuser@csp.com</string>
    <string name="nav_list_title">View List</string>
    <string name="nav_bar_open">Open Drawer</string>
    <string name="nav_bar_close">Close Drawer</string>
    <string name="nav_logoff">Log Off</string>

    <string name="welcome_message"> Canadian Ski Patrol</string>
    <string name="Login">Login</string>
    <string name="login_name">login name</string>
    <string name="Password">Password</string>
    <string name="PatrolLeader_Button">PatrolLeaderButton</string>
    <string name="Patroller_Button">PatrollerButton</string>
    <string name="patroller">I am a patroller</string>
    <string name="patrol_leader">I am a patrol leader</string>
    <string name="login_title">Log in</string>
    <string name="accidents_title">Ski Patrol</string>
    <string name="new_member">New member? Register here</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_theme">Change theme to light </string>
    <string name="new_patroller">Patroller</string>
    <string name="new_leader">Leader</string>
    <string name="apply">Apply</string>
    <string name="new_member_title">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">* First Name</string>
    <string name="last_name">* Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="user_information_title">User Information</string>
    <string name="active_user_title">Active Users</string>
    <string name="add_accident">Add accident</string>
    <string name="toolbar_accident">New Accident</string>
    <string name="toolbar_accident_map">Accident Location</string>
    <string name="Number_of_People">people</string>



    <string name="open_weather_maps_app_id">c2ecc75ac0b79ffe1bed731c813df049</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>


    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_accident_map">Map</string>
</resources>
