<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMemberActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_new_member"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorAccent">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="257dp"
        android:orientation="vertical">


        <!-- <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="47dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPatroller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:text="@string/new_patroller" />

            <RadioButton
                android:id="@+id/radioLeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_leader"/>

        </RadioGroup>
-->

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:background="#11000000"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextCEmail"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:background="#11000000"
            android:ems="10"
            android:hint="@string/confirm_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:background="#11000000"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextCPass"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:background="#11000000"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:background="@drawable/roundedbutton"
        android:text="Register"
        android:textColor="#ffff" />

</RelativeLayout>